# programming-basics-2-labs

./: .gitignore
PR1/: pr1.py
PR2/: LICENSE  README.md  pyproject.toml
PR2/examples/: demo.py
PR2/fib_lib/: generator.py  iterator.py
PR3/: pr3.py
